[gd_scene load_steps=5 format=3 uid="uid://b1ct3d00e6wf8"]

[ext_resource type="Script" path="res://addons/Components/ui/component_database/component_database_main/ComponentDatabaseMain.gd" id="1_0xiid"]
[ext_resource type="PackedScene" path="res://addons/Components/ui/component_database/component_database_main/database_list/DatabaseList.tscn" id="2_7o2sr"]
[ext_resource type="PackedScene" path="res://addons/Components/ui/component_database/component_database_main/component_list/ComponentList.tscn" id="3_ct6r7"]
[ext_resource type="PackedScene" uid="uid://bjtlok2bi817j" path="res://addons/Components/ui/component_database/component_block/ComponentBlock.tscn" id="4_5cvwm"]

[node name="ComponentDatabaseMain" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_0xiid")

[node name="Columns" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DatabaseList" parent="Columns" instance=ExtResource("2_7o2sr")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Columns"]
layout_mode = 2

[node name="ComponentList" parent="Columns" instance=ExtResource("3_ct6r7")]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="Columns"]
layout_mode = 2

[node name="ComponentBlock" parent="Columns" instance=ExtResource("4_5cvwm")]
layout_mode = 2

[connection signal="database_selected" from="Columns/DatabaseList" to="Columns/ComponentList" method="show_database_components"]
[connection signal="component_selected" from="Columns/ComponentList" to="." method="_on_component_selected"]
[connection signal="new_component_requested" from="Columns/ComponentList" to="." method="_on_new_component_requested"]
[connection signal="selection_cleared" from="Columns/ComponentList" to="." method="_on_component_selection_cleared"]
[connection signal="store_data_requested" from="Columns/ComponentBlock" to="Columns/ComponentList" method="add_component_to_database"]
